--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>unit_1_git</module>
+        <module>unit_3_review_types</module>
     </modules>
 
     <properties>
