--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>unit_1_git</module>
         <module>unit_3_review_types</module>
+        <module>unit_4_about_all_operations</module>
     </modules>
 
     <properties>
