--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>unit_3_review_types</module>
         <module>unit_4_about_all_operations</module>
         <module>unit_5_object</module>
+        <module>unit_6_strings</module>
     </modules>
 
     <properties>
