--- a/unit_api_web/src/main/resources/application.properties
+++ b/unit_api_web/src/main/resources/application.properties
@@ -1,1 +1,25 @@
-server.port   =         8087
+#MySQL connection properties
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.platform=mysql
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/db_all_circle_nix_7?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# swagger
+api.version=1.0
+swagger.enabled=true
+swagger.title=national credit API
+swagger.description=Sample Swagger implementation for the `test web api` service, leveraging annotations at the controller-method level.
+swagger.useDefaultResponseMessages=false
+swagger.enableUrlTemplating=false
+swagger.deepLinking=true
+swagger.defaultModelsExpandDepth=1
+swagger.defaultModelExpandDepth=1
+swagger.displayOperationId=false
+swagger.displayRequestDuration=false
+swagger.filter=false
+swagger.maxDisplayedTags=0
+swagger.showExtensions=false;
