--- a/unit_7_test_and_logs/pom.xml
+++ b/unit_7_test_and_logs/pom.xml
@@ -16,10 +16,37 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <lombok.version>1.18.20</lombok.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <logback.version>1.2.3</logback.version>
         <junit.version>4.13.1</junit.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <logs.folder>logs</logs.folder>
+        <logs.test.folder>test_logs</logs.test.folder>
+        <logs.life.folder>life_logs</logs.life.folder>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>test</id>
+            <properties>
+                <log.info>${logs.folder}/${logs.test.folder}/info.log</log.info>
+                <log.warn>${logs.folder}/${logs.test.folder}/warn.log</log.warn>
+                <log.error>${logs.folder}/${logs.test.folder}/error.log</log.error>
+            </properties>
+        </profile>
+        <profile>
+            <id>life</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <log.info>${logs.folder}/${logs.life.folder}/info.log</log.info>
+                <log.warn>${logs.folder}/${logs.life.folder}/warn.log</log.warn>
+                <log.error>${logs.folder}/${logs.life.folder}/error.log</log.error>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
 
@@ -50,10 +77,33 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>unit_6_strings</finalName>
+        <finalName>unit_7_test_and_logs</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
