--- a/unit_8_crud_lookup/pom.xml
+++ b/unit_8_crud_lookup/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <lombok.version>1.18.20</lombok.version>
         <commons.codec.version>1.11</commons.codec.version>
+        <reflections.version>0.9.12</reflections.version>
         <slf4j.version>1.7.30</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>4.13.1</junit.version>
@@ -102,6 +103,12 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons.codec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
         </dependency>
 
     </dependencies>
