--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>unit_8_crud_lookup</module>
         <module>unit_9_di_solid</module>
         <module>diframework</module>
+        <module>unit_10_exception</module>
     </modules>
 
     <properties>
