--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>diframework</module>
         <module>unit_10_exception</module>
         <module>unit_11_date_api</module>
+        <module>unit_12_collection_start</module>
     </modules>
 
     <properties>
