--- a/unit_12_collection_start/pom.xml
+++ b/unit_12_collection_start/pom.xml
@@ -18,6 +18,16 @@
         <maven.shade.plugin.version>3.2.0</maven.shade.plugin.version>
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <finalName>collection_start</finalName>
         <plugins>
