--- a/unit_13_ionio/pom.xml
+++ b/unit_13_ionio/pom.xml
@@ -17,6 +17,9 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.shade.plugin.version>3.2.0</maven.shade.plugin.version>
         <commons.io.version>2.7</commons.io.version>
+        <gson.version>2.8.6</gson.version>
+        <jackson.version>2.11.1</jackson.version>
+        <opencsv.version>5.2</opencsv.version>
     </properties>
 
     <dependencies>
@@ -25,6 +28,24 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons.io.version}</version>
+        </dependency>
+        <!-- GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <!-- JACKSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <!-- OPENCSV -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${opencsv.version}</version>
         </dependency>
     </dependencies>
 
